# Shades-And-Origins-II

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
main/: main.cpp
src/: board.cpp  factorial.cpp  game.cpp  headers.hpp  main.cpp  mc_node.cpp  mc_search.cpp  position.cpp  simple_game.cpp  strategic_game.cpp  symbol.cpp  types.cpp  types.hpp
tests/: board_test.cpp  factorial_test.cpp  mc_node_test.cpp  simple_game_test.cpp  strategic_game_test.cpp  valid_moves.cpp
